--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,24 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Blink Dating</a>
+    <a class="navbar-brand" routerLink="/">Blink Dating</a>
 
-    @if (accountService.currentUser()) {
+   
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-            <a class="nav-link">Matches</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link">Messages</a>
-        </li>
+            @if (accountService.currentUser()) {
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+                </li>
+            }
         </ul>
-    } 
+     
 
     @if (accountService.currentUser()) {
         <div dropdown class="dropdown">
-            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome user</a>
+            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+                Welcome {{ accountService.currentUser()?.userName | titlecase }}
+            </a>
             <div *dropdownMenu class="dropdown-menu">
                 <a class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
@@ -47,7 +51,7 @@
                 placeholder="Password"
                 type="password"
             />
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
         </form>
     }
   </div>
