--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-spinner>
+<ngx-spinner type="line-scale-party" size="medium" color="#f00">
   <h3>Loading...</h3>
 </ngx-spinner>
 <app-nav></app-nav>
