--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -91,7 +91,7 @@
                    </form>
                 </tab>
                 <tab heading="Edit photo">
-                    Photo edit is done here
+                    <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"></app-photo-editor>
                 </tab>
                 
             </tabset>
