--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,10 @@
 .dropdown{
     cursor: pointer;
 }
+
+img {
+    max-height: 50px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: inline-block;
+}
