--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -20,6 +20,7 @@
 
     @if (accountService.currentUser()) {
         <div dropdown class="dropdown">
+            <img class="me-2" src="{{ accountService.currentUser()?.photoUrl || 'user.png'}}" alt="" srcset="">
             <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
                 Welcome {{ accountService.currentUser()?.userName | titlecase }}
             </a>
